pkg/guardrails/policyDefinitions/constrainttemplates/v1/cannot-edit-individual-nodes.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srestrictednodeedits
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictedNodeEdits
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedUsers:
              type: array
              items:
                type: string
            allowedGroups:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: (V_REGO)
