pkg/guardrails/policyDefinitions/constrainttemplates/v1/no-bad-pdbs.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spdbrestrictions
  annotations:
    description: Prevents customers from applying bad Pod Disruption Budgets
spec:
  crd:
    spec:
      names:
        kind: K8sPDBRestrictions
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: (V_REGO)
